--- a/front/html/product.html
+++ b/front/html/product.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
+    fetch("http://localhost:3002/api/products/" + idProduct)
     <title>Nom du produit</title>
 
     <meta charset="utf-8">
